Fixed some text overflow

--- a/src/app/character-list-entry/character-list-entry.component.css
+++ b/src/app/character-list-entry/character-list-entry.component.css
@@ -36,6 +36,9 @@ td{
 }
 
 #name{
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 1px;
 }
 
 #cloneButtonDiv{
